carousel overflow fixed & pill shape added

--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -5,6 +5,7 @@
   width: 100%;
   align-items: center;
   margin-top: 4rem;
+  overflow: hidden;
 }
 
 .testimonials-container .heading {
